code/human_written_tests/WebAssembly/processed_control_flow_validation/test_unreachable_100.wast
(assert_invalid
  (module (func $type-block-value-nested-return-void-vs-num (result i32)
    (block (block (return (i32.const 0))))
  ))
  "type mismatch"
)